--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  								<source src="jainil.mp3" type="audio/mp3">
  												.
  								</source>
- 				</audio>
+ 				</audio><center>
  				<div class="java">J<sub>ainil's</sub> A<sub>rtificial </sub>V<sub>irtual </sub>A<sub>ssistant</sub></div>
  				</center>
  				
